--- a/index.html
+++ b/index.html
@@ -10,136 +10,137 @@
 </head>
 <body>
     
-<div class="container mt-5">
-  <h2 class="mb-4">Perbandingan Smartphone</h2>
-    <table class="table table-bordered" id="phoneTable">
-      <tr>
-          <td>No</td>
-          <td>Alternatif HP</td>
-          <td>Memori</td>
-          <td>Penyimpanan</td>
-          <td>Kamera</td>
-          <td>Battery</td>
-          <td>Harga</td>
-          <td>Bobot</td>
-          <td>Pengisian Daya</td>
-      </tr>
-      <tr>
-          <td>1</td>
-          <td>Samsung Galaxy S23 FE</td>
-          <td>8 GB</td>
-          <td>256 GB</td>
-          <td>50 MP</td>
-          <td>4500 maAh</td>
-          <td>Rp9,999,000</td>
-          <td>209 g</td>
-          <td>25 W</td>
-      </tr>
-      <tr>
-          <td>2</td>
-          <td>Samsung Galaxy A54</td>
-          <td>8 GB</td>
-          <td>128 GB</td>
-          <td>50 MP</td>
-          <td>5000 mAh</td>
-          <td>Rp5,999,000</td>
-          <td>202 g</td>
-          <td>25 W</td>
-      </tr>
-      <tr>
-          <td>3</td>
-          <td>Samsung Galaxy M54</td>
-          <td>8 GB</td>
-          <td>256 GB</td>
-          <td>108 MP</td>
-          <td>6000 mAh</td>
-          <td>Rp6,499,000</td>
-          <td>199 g</td>
-          <td>25 W</td>
-      </tr>
-      <tr>
-          <td>4</td>
-          <td>Xiaomi 13T</td>
-          <td>12 GB</td>
-          <td>256 GB</td>
-          <td>50 MP</td>
-          <td>5000 mAh</td>
-          <td>Rp6,499,000</td>
-          <td>193 g</td>
-          <td>67 W</td>
-      </tr>
-      <tr>
-          <td>5</td>
-          <td>Poco F5</td>
-          <td>8 GB</td>
-          <td>256 GB</td>
-          <td>64 MP</td>
-          <td>5000mAh</td>
-          <td>Rp4,999,000</td>
-          <td>181 g</td>
-          <td>67 W</td>
-      </tr>
-      <tr>
-          <td>6</td>
-          <td>Poco X5 Pro</td>
-          <td>6 GB</td>
-          <td>128 GB</td>
-          <td>108 MP</td>
-          <td>5000mAh</td>
-          <td>Rp3,999,000</td>
-          <td>181 g</td>
-          <td>67 W</td>
-      </tr>
-      <tr>
-          <td>7</td>
-          <td>Vivo V29</td>
-          <td>12 GB</td>
-          <td>512 GB</td>
-          <td>50 MP</td>
-          <td>4600 mAh</td>
-          <td>Rp6,999,000</td>
-          <td>186 g</td>
-          <td>80 W</td>
-      </tr>
-      <tr>
-          <td>8</td>
-          <td>Redmi Note 12 Pro 5G</td>
-          <td>8 GB</td>
-          <td>256 GB</td>
-          <td>50 Mp</td>
-          <td>5000 mAh</td>
-          <td>Rp4,599,000</td>
-          <td>187 g</td>
-          <td>67 W</td>
-      </tr>
-      <tr>
-          <td>9</td>
-          <td>Samsung Galaxy M34</td>
-          <td>8 GB</td>
-          <td>128 GB</td>
-          <td>50 MP</td>
-          <td>6000 mAh</td>
-          <td>Rp3,999,000</td>
-          <td>200 g</td>
-          <td>25 W</td>
-      </tr>
-      <tr>
-          <td>10</td>
-          <td>Poco X5 5G</td>
-          <td>8 GB</td>
-          <td>256 GB</td>
-          <td>48 MP</td>
-          <td>5000 mAh</td>
-          <td>Rp3,499,000</td>
-          <td>189 gr</td>
-          <td>33 W</td>
-      </tr>
-    </table>
+<div class="container-fluid mt-6">
+  <h2 class="mb-5">Perbandingan Smartphone</h2>
+    <div class="table-responsive">
+        <table class="table table-bordered" id="phoneTable">
+            <tr>
+                <td>No</td>
+                <td>Alternatif</td>
+                <td>Memori</td>
+                <td>Penyimpanan</td>
+                <td>Kamera</td>
+                <td>Baterai</td>
+                <td>Harga</td>
+                <td>Bobot</td>
+                <td>Pengisian Daya</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Samsung Galaxy S23 FE</td>
+                <td>8 GB</td>
+                <td>256 GB</td>
+                <td>50 MP</td>
+                <td>4500 maAh</td>
+                <td>Rp9,999,000</td>
+                <td>209 g</td>
+                <td>25 W</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Samsung Galaxy A54</td>
+                <td>8 GB</td>
+                <td>128 GB</td>
+                <td>50 MP</td>
+                <td>5000 mAh</td>
+                <td>Rp5,999,000</td>
+                <td>202 g</td>
+                <td>25 W</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Samsung Galaxy M54</td>
+                <td>8 GB</td>
+                <td>256 GB</td>
+                <td>108 MP</td>
+                <td>6000 mAh</td>
+                <td>Rp6,499,000</td>
+                <td>199 g</td>
+                <td>25 W</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Xiaomi 13T</td>
+                <td>12 GB</td>
+                <td>256 GB</td>
+                <td>50 MP</td>
+                <td>5000 mAh</td>
+                <td>Rp6,499,000</td>
+                <td>193 g</td>
+                <td>67 W</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Poco F5</td>
+                <td>8 GB</td>
+                <td>256 GB</td>
+                <td>64 MP</td>
+                <td>5000mAh</td>
+                <td>Rp4,999,000</td>
+                <td>181 g</td>
+                <td>67 W</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Poco X5 Pro</td>
+                <td>6 GB</td>
+                <td>128 GB</td>
+                <td>108 MP</td>
+                <td>5000mAh</td>
+                <td>Rp3,999,000</td>
+                <td>181 g</td>
+                <td>67 W</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Vivo V29</td>
+                <td>12 GB</td>
+                <td>512 GB</td>
+                <td>50 MP</td>
+                <td>4600 mAh</td>
+                <td>Rp6,999,000</td>
+                <td>186 g</td>
+                <td>80 W</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Redmi Note 12 Pro 5G</td>
+                <td>8 GB</td>
+                <td>256 GB</td>
+                <td>50 Mp</td>
+                <td>5000 mAh</td>
+                <td>Rp4,599,000</td>
+                <td>187 g</td>
+                <td>67 W</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Samsung Galaxy M34</td>
+                <td>8 GB</td>
+                <td>128 GB</td>
+                <td>50 MP</td>
+                <td>6000 mAh</td>
+                <td>Rp3,999,000</td>
+                <td>200 g</td>
+                <td>25 W</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Poco X5 5G</td>
+                <td>8 GB</td>
+                <td>256 GB</td>
+                <td>48 MP</td>
+                <td>5000 mAh</td>
+                <td>Rp3,499,000</td>
+                <td>189 gr</td>
+                <td>33 W</td>
+            </tr>
+          </table>
+    </div>
 
   <div class="text-center">
-    <button class="btn btn-primary mt-3" onclick="comparePhones()">Compare</button>
+    <button class="btn btn-primary mt-4 mb-4" onclick="comparePhones()">Compare</button>
   </div>
-  <br>
   <div id="resultTable"></div>
 </div>
 
