--- a/index.html
+++ b/index.html
@@ -6,147 +6,40 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel=icon href="https://i.postimg.cc/WpJ6pwdK/New-BATTALION-CHIEF.png"> 
-  <title>SPK - Perbandingan HP</title>
+  <title>SPK - Perbandingan</title>
 </head>
 <body>
     
 <div class="container-fluid mt-6">
-  <h2 class="mb-5">Perbandingan Smartphone</h2>
+    <h2 class="mb-5 text-center mt-5">Perbandingan</h2>
     <div class="table-responsive">
-        <table class="table table-bordered" id="phoneTable">
+        <table class="table table-bordered" id="dummy">
+            <!-- Table Header -->
             <tr>
-                <td>No</td>
-                <td>Alternatif</td>
-                <td>Memori</td>
-                <td>Penyimpanan</td>
-                <td>Kamera</td>
-                <td>Baterai</td>
-                <td>Harga</td>
-                <td>Bobot</td>
-                <td>Pengisian Daya</td>
+                <th>Alternatif</th>
+                <th>C1</th>
+                <th>C2</th>
+                <th>C3</th>
+                <th>C4</th>
+                <th>C5</th>
+                <th>C6</th>
+                <th>C7</th>
             </tr>
-            <tr>
-                <td>1</td>
-                <td>Samsung Galaxy S23 FE</td>
-                <td>8 GB</td>
-                <td>256 GB</td>
-                <td>50 MP</td>
-                <td>4500 maAh</td>
-                <td>Rp9,999,000</td>
-                <td>209 g</td>
-                <td>25 W</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Samsung Galaxy A54</td>
-                <td>8 GB</td>
-                <td>128 GB</td>
-                <td>50 MP</td>
-                <td>5000 mAh</td>
-                <td>Rp5,999,000</td>
-                <td>202 g</td>
-                <td>25 W</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Samsung Galaxy M54</td>
-                <td>8 GB</td>
-                <td>256 GB</td>
-                <td>108 MP</td>
-                <td>6000 mAh</td>
-                <td>Rp6,499,000</td>
-                <td>199 g</td>
-                <td>25 W</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Xiaomi 13T</td>
-                <td>12 GB</td>
-                <td>256 GB</td>
-                <td>50 MP</td>
-                <td>5000 mAh</td>
-                <td>Rp6,499,000</td>
-                <td>193 g</td>
-                <td>67 W</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Poco F5</td>
-                <td>8 GB</td>
-                <td>256 GB</td>
-                <td>64 MP</td>
-                <td>5000mAh</td>
-                <td>Rp4,999,000</td>
-                <td>181 g</td>
-                <td>67 W</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>Poco X5 Pro</td>
-                <td>6 GB</td>
-                <td>128 GB</td>
-                <td>108 MP</td>
-                <td>5000mAh</td>
-                <td>Rp3,999,000</td>
-                <td>181 g</td>
-                <td>67 W</td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>Vivo V29</td>
-                <td>12 GB</td>
-                <td>512 GB</td>
-                <td>50 MP</td>
-                <td>4600 mAh</td>
-                <td>Rp6,999,000</td>
-                <td>186 g</td>
-                <td>80 W</td>
-            </tr>
-            <tr>
-                <td>8</td>
-                <td>Redmi Note 12 Pro 5G</td>
-                <td>8 GB</td>
-                <td>256 GB</td>
-                <td>50 Mp</td>
-                <td>5000 mAh</td>
-                <td>Rp4,599,000</td>
-                <td>187 g</td>
-                <td>67 W</td>
-            </tr>
-            <tr>
-                <td>9</td>
-                <td>Samsung Galaxy M34</td>
-                <td>8 GB</td>
-                <td>128 GB</td>
-                <td>50 MP</td>
-                <td>6000 mAh</td>
-                <td>Rp3,999,000</td>
-                <td>200 g</td>
-                <td>25 W</td>
-            </tr>
-            <tr>
-                <td>10</td>
-                <td>Poco X5 5G</td>
-                <td>8 GB</td>
-                <td>256 GB</td>
-                <td>48 MP</td>
-                <td>5000 mAh</td>
-                <td>Rp3,499,000</td>
-                <td>189 gr</td>
-                <td>33 W</td>
-            </tr>
-          </table>
+            <!-- Data Rows Will Be Appended Here -->
+        </table>
     </div>
 
-  <div class="text-center">
-    <button class="btn btn-primary mt-4 mb-4" onclick="comparePhones()">Compare</button>
-  </div>
-  <div id="resultTable"></div>
+    <div class="container-fluid mt-6 mb-6">
+        <div class="text-center">
+            <button class="btn btn-primary mt-4 mb-4" onclick="displayResults()">Compare</button>
+        </div>
+        <div id="resultTable"></div>
+    </div>
 </div>
 
-<script src="script.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
