--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel=icon href="https://i.postimg.cc/WpJ6pwdK/New-BATTALION-CHIEF.png"> 
-  <title>SPK - Perbandingan</title>
+  <title>SPK - Topsis</title>
 </head>
 <body>
     
