--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
 <div class="container-fluid mt-6">
-    <h2 class="mb-5 text-center mt-5">Perbandingan</h2>
+    <h2 class="mb-5 text-center mt-5">Sistem Pendukung Keputusan Pemilihan Sepatu Pada Online Shop Choice Fashion Menggunakan Metode Topsis</h2>
     <div class="table-responsive">
         <table class="table table-bordered" id="dummy">
             <!-- Table Header -->
